# Legio-Parser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: into_match.rs  lib.rs  match_result.rs  match_static.rs  match_static_multiple.rs  match_with.rs  match_with_in_range.rs  result.rs  traits.rs
src/tests/: discarding.rs  match_alternatives.rs  match_mapped_alternatives.rs  match_static.rs  match_static_multiple.rs  match_with.rs
src/tests/std/: collecting_match.rs
src/traits/: alternatives.rs  into_match.rs  match_fail.rs  match_static.rs  match_static_mapped.rs  match_with.rs  match_with_in_range.rs  match_with_in_range_mapped.rs  match_with_mapped.rs
