[package]
name = "legio-parser"
description = "Parsing library that uses combinatory logic."
license-file = "LICENSE"
readme = "README.md"
keywords = ["parser", "parsing"]
categories = ["Parsing"]
repository = "https://github.com/Dark-Legion/Legio-Parser"
version = "0.3.0"
authors = ["Kiril Mihaylov <Kiril195@hotmail.com>"]
edition = "2018"

[features]
default = ["std"]

std = []
no_track_caller = []

[dependencies]
